--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <nav>
+      <div class="container header-container">
+        <nav class="header-nav">
           <a href="./index.html" class="logo-web"
             >Web<span class="logo-studio">Studio</span></a
           >
-          <ul>
+          <ul class="header-nav-list">
             <li>
               <a href="./index.html" class="nav-element">Studio</a>
             </li>
@@ -39,7 +39,7 @@
           </ul>
         </nav>
         <address class="contact-info">
-          <ul>
+          <ul class="header-adress-list">
             <li>
               <a href="mailto:info@devstudio.com" class="adress-element"
                 >info@devstudio.com</a
@@ -64,30 +64,31 @@
 
       <section class="section-two">
         <div class="container">
-          <h2 class="section-title">Advantages</h2>
-          <ul>
-            <li>
+          <!--<h2 class="section-title">Advantages</h2>-->
+
+          <ul class="section-two-list">
+            <li class="section-two-item">
               <h3 class="list-title">Strategy</h3>
               <p class="list-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="section-two-item">
               <h3 class="list-title">Punctuality</h3>
               <p class="list-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="section-two-item">
               <h3 class="list-title">Diligence</h3>
               <p class="list-text">
                 Research and confirm brands with the strongest digital growth
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="section-two-item">
               <h3 class="list-title">Technologies</h3>
               <p class="list-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -101,7 +102,7 @@
       <section class="section-three">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
-          <ul>
+          <ul class="section-three-list">
             <li class="photo-team">
               <img
                 src="./images/img-1.jpg"
@@ -216,7 +217,7 @@
     </main>
 
     <footer class="footer-section">
-      <div class="container">
+      <div class="container footer-container">
         <a href="./index.html" class="logo-web"
           >Web <span class="logo-studio">Studio</span>
         </a>
