--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </address>
       </div>
     </header>
+
     <main>
       <section class="section-one">
         <div class="container">
@@ -67,8 +68,7 @@
 
       <section class="section-two">
         <div class="container">
-          <!--<h2 class="section-title">Advantages</h2>-->
-
+          <h2 class="section-title visually-hidden">Advantages</h2>
           <ul class="section-two-list">
             <li class="section-two-item">
               <h3 class="list-title">Strategy</h3>
