--- a/index.html
+++ b/index.html
@@ -113,8 +113,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="list-title">Mark Guerrero</h3>
-              <p class="list-text">Product Designer</p>
+              <div class="weird-div">
+                <h3 class="list-title">Mark Guerrero</h3>
+                <p class="list-text">Product Designer</p>
+              </div>
             </li>
             <li class="photo-team">
               <img
@@ -123,8 +125,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="list-title">Tom Ford</h3>
-              <p class="list-text">Frontend Developer</p>
+              <div class="weird-div">
+                <h3 class="list-title">Tom Ford</h3>
+                <p class="list-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="photo-team">
               <img
@@ -133,8 +137,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="list-title">Camila Garcia</h3>
-              <p class="list-text">Marketing</p>
+              <div class="weird-div">
+                <h3 class="list-title">Camila Garcia</h3>
+                <p class="list-text">Marketing</p>
+              </div>
             </li>
             <li class="photo-team">
               <img
@@ -143,8 +149,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="list-title">Daniel Wilson</h3>
-              <p class="list-text">UI Designer</p>
+              <div class="weird-div">
+                <h3 class="list-title">Daniel Wilson</h3>
+                <p class="list-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
