--- a/index.html
+++ b/index.html
@@ -169,8 +169,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="list-title">Banking App</h3>
-              <p class="list-text">App</p>
+              <div class="weird-div-also">
+                <h3 class="list-title">Banking App</h3>
+                <p class="list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -179,8 +181,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="list-title">Cashless Payment</h3>
-              <p class="list-text">Marketing</p>
+              <div class="weird-div-also">
+                <h3 class="list-title">Cashless Payment</h3>
+                <p class="list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -189,8 +193,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="list-title">Meditation App</h3>
-              <p class="list-text">App</p>
+              <div class="weird-div-also">
+                <h3 class="list-title">Meditation App</h3>
+                <p class="list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -199,8 +205,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="list-title">Taxi Service</h3>
-              <p class="list-text">Marketing</p>
+              <div class="weird-div-also">
+                <h3 class="list-title">Taxi Service</h3>
+                <p class="list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -209,8 +217,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="list-title">Screen Illustrations</h3>
-              <p class="list-text">Design</p>
+              <div class="weird-div-also">
+                <h3 class="list-title">Screen Illustrations</h3>
+                <p class="list-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -219,8 +229,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="list-title">Online Courses</h3>
-              <p class="list-text">Marketing</p>
+              <div class="weird-div-also">
+                <h3 class="list-title">Online Courses</h3>
+                <p class="list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -229,10 +241,12 @@
 
     <footer class="footer-section">
       <div class="container footer-container">
-        <a href="./index.html" class="logo-web"
-          >Web <span class="logo-studio">Studio</span>
-        </a>
-        <p class="list-text">
+        <div class="footer-logo">
+          <a href="./index.html" class="logo-web"
+            >Web <span class="logo-studio">Studio</span>
+          </a>
+        </div>
+        <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
