--- a/index.html
+++ b/index.html
@@ -107,48 +107,28 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="section-three-list">
             <li class="photo-team">
-              <img
-                src="./images/img-1.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
+              <img src="./images/img-1.jpg" alt="Mark Guerrero" height="260" />
               <div class="weird-div">
                 <h3 class="list-title">Mark Guerrero</h3>
                 <p class="list-text">Product Designer</p>
               </div>
             </li>
             <li class="photo-team">
-              <img
-                src="./images/img-2.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
+              <img src="./images/img-2.jpg" alt="Tom Ford" height="260" />
               <div class="weird-div">
                 <h3 class="list-title">Tom Ford</h3>
                 <p class="list-text">Frontend Developer</p>
               </div>
             </li>
             <li class="photo-team">
-              <img
-                src="./images/img-3.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              />
+              <img src="./images/img-3.jpg" alt="Camila Garcia" height="260" />
               <div class="weird-div">
                 <h3 class="list-title">Camila Garcia</h3>
                 <p class="list-text">Marketing</p>
               </div>
             </li>
             <li class="photo-team">
-              <img
-                src="./images/img-4.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              />
+              <img src="./images/img-4.jpg" alt="Daniel Wilson" height="260" />
               <div class="weird-div">
                 <h3 class="list-title">Daniel Wilson</h3>
                 <p class="list-text">UI Designer</p>
@@ -242,7 +222,7 @@
     <footer class="footer-section">
       <div class="container footer-container">
         <a href="./index.html" class="logo-web"
-          >Web <span class="logo-studio">Studio</span>
+          >Web<span class="logo-studio">Studio</span>
         </a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
