--- a/index.html
+++ b/index.html
@@ -143,12 +143,7 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/img-5.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <img src="./images/img-5.jpg" alt="Banking App" height="300" />
               <div class="weird-div-also">
                 <h3 class="list-title">Banking App</h3>
                 <p class="list-text">App</p>
@@ -158,7 +153,6 @@
               <img
                 src="./images/img-6.jpg"
                 alt="Cashless Payment"
-                width="360"
                 height="300"
               />
               <div class="weird-div-also">
@@ -167,24 +161,14 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img-7.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <img src="./images/img-7.jpg" alt="Meditation App" height="300" />
               <div class="weird-div-also">
                 <h3 class="list-title">Meditation App</h3>
                 <p class="list-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img-8.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <img src="./images/img-8.jpg" alt="Taxi Service" height="300" />
               <div class="weird-div-also">
                 <h3 class="list-title">Taxi Service</h3>
                 <p class="list-text">Marketing</p>
@@ -194,7 +178,6 @@
               <img
                 src="./images/img-9.jpg"
                 alt="Screen Illustrations"
-                width="360"
                 height="300"
               />
               <div class="weird-div-also">
@@ -206,7 +189,6 @@
               <img
                 src="./images/img-10.jpg"
                 alt="Online Courses"
-                width="360"
                 height="300"
               />
               <div class="weird-div-also">
