--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 
     <footer class="footer-section">
       <div class="container footer-container">
-        <a href="./index.html" class="logo-web"
-          >Web<span class="logo-studio">Studio</span>
+        <a href="./index.html" class="footer-logo-web"
+          >Web<span class="footer-logo-studio">Studio</span>
         </a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
